--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: workflow_dispatch
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-eshoponweb-eastus
-  LOCATION: eastus
+  LOCATION: japanwest
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: caad4599-a2ca-4af1-82cd-06ca893ecd3e
   WEBAPP-NAME: devops-webapp-eastus-2452519483
